Fixes issue #120. Right edge clipped on printing.

--- a/css/main.css
+++ b/css/main.css
@@ -387,6 +387,7 @@ table th {
 		border: 1px solid black;
 		margin-left: -15px;
 		padding-left: 30px;
+		padding-right: 30px;
 		padding-top:0;
 		padding-bottom:0;
 	}
